content: add github-readme-stats cards

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         <p><a class="btn-link" href="https://github.com/coko7/advent-of-time">aot/</a> Advent of Time browser game</p>
         <p><a class="btn-link" href="https://github.com/coko7/mataho">mataho/</a> CLI to interact with a local Tahoma box</p>
         <p><a class="btn-link" href="https://github.com/coko7/kanumi">kanumi/</a> CLI to manage collection of images</p>
+
+        <div class="github-readme-stats">
+          <img src="https://github-readme-stats-two-eta-55.vercel.app/api/top-langs?username=coko7&layout=compact&theme=transparent&title_color=ffffffff&text_color=ffffffff&bg_color=00000000&hide_border=true&langs_count=10&card_width=200px" />
+          <img src="https://github-readme-stats-two-eta-55.vercel.app/api?username=coko7&custom_title=GitHub+stats&show_icons=true&theme=transparent&title_color=ffffffff&text_color=ffffffff&icon_color=ffa500ff&hide_border=true&card_width=200px&hide_rank=true" />
+        </div>
       </article>
 
       <article>
