--- a/index.html
+++ b/index.html
@@ -26,14 +26,16 @@
       </div>
 
       <article class="intro">
-        <h3 class="title">whoami | xargs -i cat intro_{}.txt</h3>
+        <h3 class="title large">whoami | xargs -i cat intro_{}.txt</h3>
+        <h3 class="title small">whoami</h3>
         <p>I'm coko.</p>
         <p>A french dev passionate about programming and open-source</p>
         <p>The terminal is my comfy place: Linux, nvim, fzf <i>*and more*</i></p>
       </article>
 
       <article>
-        <h3 class="title">fd .git --type dir --hidden <span class="env-var">$HOME</span>/projects</h3>
+        <h3 class="title large">fd .git --type dir --hidden <span class="env-var">$HOME</span>/projects</h3>
+        <h3 class="title small">find projects -type d</h3>
         <p><a class="btn-link" href="https://github.com/coko7/vegapull">vegapull/</a> One Piece TCG data scraper</p>
         <p><a class="btn-link" href="https://github.com/coko7/advent-of-time">aot/</a> Advent of Time browser game</p>
         <p><a class="btn-link" href="https://github.com/coko7/mataho">mataho/</a> CLI to interact with a local Tahoma box</p>
@@ -46,7 +48,8 @@
       </article>
 
       <article>
-        <h3 class="title">glow <span class="env-var">$(</span>locate '*env-config.md' | head -n 1<span class="env-var">)</span></h3>
+        <h3 class="title large">glow <span class="env-var">$(</span>locate '*env-config.md' | head -n 1<span class="env-var">)</span></h3>
+        <h3 class="title small">glow env-config.md</h3>
         <p><a class="btn-link" href="https://github.com/coko7/.dotfiles">.dotfiles/</a> My Arch Linux config files and scripts</p>
         <p><a class="btn-link" href="https://github.com/coko7/nvim-config">nvim-config/</a> My custom <span class="env-var">$EDITOR</span> config</p>
         <p><a class="btn-link" href="https://github.com/coko7/my-floss">my-floss/</a> Free/Libre Open-Source stuff I use</p>
@@ -57,7 +60,8 @@
       </article>
 
       <article>
-        <h3 class="title">bat hobbies.txt</h3>
+        <h3 class="title large">bat hobbies.txt</h3>
+        <h3 class="title small">cat hobbies.txt</h3>
         <p>* coding</p>
         <p>* running</p>
         <p>* reading</p>
@@ -65,7 +69,8 @@
       </article>
 
       <article>
-        <h3 class="title">rg social | awk print -F; '{<span class="env-var">$2</span>,<span class="env-var">$3</span>}'</h3>
+        <h3 class="title large">rg social | awk print -F; '{<span class="env-var">$2</span>,<span class="env-var">$3</span>}'</h3>
+        <h3 class="title small">grep social</h3>
 
         <p>
           <a class="btn-link" href="https://github.com/coko7">
