feat: add new sections (github and homelab) + add email

--- a/index.html
+++ b/index.html
@@ -40,10 +40,19 @@
         <p><a class="btn-link" href="https://github.com/coko7/advent-of-time">aot/</a> Advent of Time browser game</p>
         <p><a class="btn-link" href="https://github.com/coko7/mataho">mataho/</a> CLI to interact with a local Tahoma box</p>
         <p><a class="btn-link" href="https://github.com/coko7/kanumi">kanumi/</a> CLI to manage collection of images</p>
+        <p><a class="btn-link" href="https://github.com/coko7/somfy-home-controller">shc/</a> Node.js domotic script to control Somfy shutters</p>
+        <p><a class="btn-link" href="https://github.com/coko7/tcb-opus">tcb-opus/</a> Discord bot notifies users when new manga chapters come out</p>
+      </article>
 
-        <div class="github-readme-stats">
-          <img src="https://github-readme-stats-two-eta-55.vercel.app/api/top-langs?username=coko7&layout=compact&theme=transparent&title_color=ffffffff&text_color=ffffffff&bg_color=00000000&hide_border=true&langs_count=10&card_width=200px" />
-          <img src="https://github-readme-stats-two-eta-55.vercel.app/api?username=coko7&custom_title=GitHub+stats&show_icons=true&theme=transparent&title_color=ffffffff&text_color=ffffffff&icon_color=ffa500ff&hide_border=true&card_width=200px&hide_rank=true" />
+      <article class="github-stats-article">
+        <h3 class="title large">gh --stats --user=<span class="env-var">$(</span>whoami<span class="env-var">)</span></h3>
+        <h3 class="title small">gh --stats --user=<span class="env-var">$(</span>whoami<span class="env-var">)</span></h3>
+        <div class="github-stats">
+          <div class="github-readme-stats">
+            <img src="https://github-readme-stats-two-eta-55.vercel.app/api/top-langs?username=coko7&layout=compact&theme=transparent&title_color=ffffffff&text_color=ffffffff&bg_color=00000000&hide_border=true&langs_count=10&card_width=200px" />
+            <img src="https://github-readme-stats-two-eta-55.vercel.app/api?username=coko7&custom_title=GitHub+stats&show_icons=true&theme=transparent&title_color=ffffffff&text_color=ffffffff&icon_color=ffa500ff&hide_border=true&card_width=200px&hide_rank=true" />
+          </div>
+          <img id="gh-snake" src="https://raw.githubusercontent.com/Coko7/Coko7/snake/github-contribution-grid-snake-dark.svg"/>
         </div>
       </article>
 
@@ -57,6 +66,14 @@
           <img id="keyboard-picture" src="./assets/crkbd_kb.png" alt="custom Corne keyboard">
         </a>
         <p style="text-align: center">More about my keyboard at <a class="btn-link" href="https://github.com/coko7/crkbd">coko7/crkbd</a></p>
+      </article>
+
+      <article>
+        <h3 class="title large">ssh homelab@127.0.0.1 -p 22</h3>
+        <h3 class="title small">ssh homelab@127.0.0.1</h3>
+        <a href="https://http.cat">
+          <img style="max-width: 100%" src="https://http.cat/501"/>
+        </a>
       </article>
 
       <article>
@@ -95,6 +112,12 @@
             <i class="si si-dailydotdev" style="font-weight: normal"></i>
             daily.dev:</a>
           i am there but also not really
+        </p>
+        <p>
+          <a class="btn-link" href="mailto:contact@coko7.fr">
+            <i class="si si-protonmail" style="font-weight: normal"></i>
+            Email:</a>
+          contact me via email at contact@coko7.fr
         </p>
       </article>
     </main>
