--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-icons-font@v16/font/simple-icons.min.css" type="text/css">
     <meta name="author" content="coko7">
+    <meta name="subject" content="coko7 | read.me">
+    <meta property="og:title" content="coko7 | read.me">
+    <meta property="twitter:title" content="coko7 | read.me">
     <meta name="description" content="Hi! I'm coko, a french dev who's passionate about programming and open-source. I love working with Linux environments and the terminal is where I spend most of my time.">
-    <meta name="subject" content="coko7's portfolio">
+    <meta property="og:description" content="Hi! I'm coko, a french dev who's passionate about programming and open-source. I love working with Linux environments and the terminal is where I spend most of my time.">
+    <meta name="twitter:description" content="Hi! I'm coko, a french dev who's passionate about programming and open-source. I love working with Linux environments and the terminal is where I spend most of my time.">
+    <meta name="twitter:card" content="summary">
+    <meta property="og:url" content="https://coko7.fr">
+    <meta property="og:image" content="https://coko7.fr/assets/coko7-banner.png">
+    <meta name="twitter:image" content="https://coko7.fr/assets/coko7-banner.png">
     <link rel="icon" sizes="192x192" href="./assets/favicon.png">
     <link rel="apple-touch-icon" href="./assets/favicon.png">
   </head>
