--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <h3 class="title large">whoami | xargs -i cat intro_{}.txt</h3>
         <h3 class="title small">whoami</h3>
         <p>I'm coko.</p>
-        <p>A french dev passionate about programming and open-source</p>
-        <p>The terminal is my comfy place: Linux, nvim, fzf <i>*and more*</i></p>
+        <p>A french dev who's passionate about programming and open-source</p>
+        <p>The terminal is my comfy place: nvim, tmux, fzf, rg <i>*and more*</i></p>
       </article>
 
       <article>
@@ -50,6 +50,7 @@
         <p><a class="btn-link" href="https://github.com/coko7/kanumi">kanumi/</a> CLI to manage collection of images</p>
         <p><a class="btn-link" href="https://github.com/coko7/somfy-home-controller">shc/</a> Node.js domotic script to control Somfy shutters</p>
         <p><a class="btn-link" href="https://github.com/coko7/tcb-opus">tcb-opus/</a> Discord bot notifies users when new manga chapters come out</p>
+        <p><a class="btn-link" href="https://github.com/RTFW-rs/rtfw-http-rs">rtfw-http-rs/</a> My own rust http server from scratch</p>
       </article>
 
       <article class="github-stats-article">
@@ -57,10 +58,16 @@
         <h3 class="title small">gh --stats --user=<span class="env-var">$(</span>whoami<span class="env-var">)</span></h3>
         <div class="github-stats">
           <div class="github-readme-stats">
-            <img src="https://github-readme-stats-two-eta-55.vercel.app/api/top-langs?username=coko7&layout=compact&theme=transparent&title_color=ffffffff&text_color=ffffffff&bg_color=00000000&hide_border=true&langs_count=10&card_width=200px" />
-            <img src="https://github-readme-stats-two-eta-55.vercel.app/api?username=coko7&custom_title=GitHub+stats&show_icons=true&theme=transparent&title_color=ffffffff&text_color=ffffffff&icon_color=ffa500ff&hide_border=true&card_width=200px&hide_rank=true" />
+            <a href="https://github.com/coko7">
+              <img src="https://github-readme-stats-two-eta-55.vercel.app/api/top-langs?username=coko7&layout=compact&theme=transparent&title_color=ffffffff&text_color=ffffffff&bg_color=00000000&hide_border=true&langs_count=10&card_width=200px" />
+            </a>
+            <a href="https://github.com/coko7">
+              <img src="https://github-readme-stats-two-eta-55.vercel.app/api?username=coko7&custom_title=GitHub+stats&show_icons=true&theme=transparent&title_color=ffffffff&text_color=ffffffff&icon_color=ffa500ff&hide_border=true&card_width=200px&hide_rank=true" />
+            </a>
           </div>
-          <img id="gh-snake" src="https://raw.githubusercontent.com/Coko7/Coko7/snake/github-contribution-grid-snake-dark.svg"/>
+          <a href="https://github.com/coko7">
+            <img id="gh-snake" src="https://raw.githubusercontent.com/Coko7/Coko7/snake/github-contribution-grid-snake-dark.svg"/>
+          </a>
         </div>
       </article>
 
@@ -70,6 +77,7 @@
         <p><a class="btn-link" href="https://github.com/coko7/.dotfiles">.dotfiles/</a> My Arch Linux config files and scripts</p>
         <p><a class="btn-link" href="https://github.com/coko7/nvim-config">nvim-config/</a> My custom <span class="env-var">$EDITOR</span> config</p>
         <p><a class="btn-link" href="https://github.com/coko7/my-floss">my-floss/</a> Free/Libre Open-Source stuff I use</p>
+        <p><a class="btn-link" href="https://github.com/coko7/sofle">sofle/</a> QMK config for my previous ergo keyboard</p>
         <a href="https://github.com/coko7/crkbd">
           <img id="keyboard-picture" src="./assets/crkbd_kb.png" alt="custom Corne keyboard">
         </a>
@@ -97,14 +105,14 @@
         <h3 class="title large">jq .coco.hobbies &lt; info.json</h3>
         <h3 class="title small">jq . &lt; hobbies.json</h3>
         <pre class="pre-json large"><code>[
-  { <span class="hl-str">"name"</span>: "programming", <span class="hl-str">"emoji"</span>: "⌨️" },
+  { <span class="hl-str">"name"</span>: "coding", <span class="hl-str">"emoji"</span>: "⌨️" },
   { <span class="hl-str">"name"</span>: "running", <span class="hl-str">"emoji"</span>: "🏃" },
   { <span class="hl-str">"name"</span>: "reading", <span class="hl-str">"emoji"</span>: "📖" },
   { <span class="hl-str">"name"</span>: "anime", <span class="hl-str">"emoji"</span>: "🇯🇵" },
   { <span class="hl-str">"name"</span>: "gaming", <span class="hl-str">"emoji"</span>: "🎮" }
 ]</code></pre>
         <pre class="pre-json small"><code>[
-  { <span class="hl-str">"name"</span>: "programming" },
+  { <span class="hl-str">"name"</span>: "coding" },
   { <span class="hl-str">"name"</span>: "running" },
   { <span class="hl-str">"name"</span>: "reading" },
   { <span class="hl-str">"name"</span>: "anime" },
