chore: update README + content

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
           <h4>Software</h4>
           <p>* Self-hosted send instance at <a href="https://send.coko7.fr" class="btn-link">send.coko7.fr</a></p>
           <p>* AOT game at <a href="https://aot.coko7.fr" class="btn-link">aot.coko7.fr</a></p>
+          <p>* Caddy/Nginx as reverse proxies</p>
         </div>
       </article>
 
@@ -160,7 +161,12 @@
     <script src="script.js"></script>
 
     <footer>
-      Copyright <span id="copyright-span">(c)</span> 2025 coko7. All Rights Reserved.
+      <p style="margin-bottom: 1em">
+        Sources available on 
+        <a href="https://github.com/coko7/portfolio" class="btn-link">&lt;GitHub&gt;</a>
+      </p>
+      <p>Copyright <span id="copyright-span">(c)</span> 2025 coko7</p>
+      <p>All Rights Reserved</p>
     </footer>
   </body>
 </html>
