style: update css for better mobile experience

--- a/index.html
+++ b/index.html
@@ -44,13 +44,27 @@
       <article>
         <h3 class="title large">fd .git --type dir --hidden <span class="env-var">$HOME</span>/projects</h3>
         <h3 class="title small">find projects -type d</h3>
-        <p><a class="btn-link" href="https://github.com/coko7/vegapull">vegapull/</a> One Piece TCG data scraper</p>
-        <p><a class="btn-link" href="https://github.com/coko7/advent-of-time">aot/</a> Advent of Time browser game</p>
-        <p><a class="btn-link" href="https://github.com/coko7/mataho">mataho/</a> CLI to interact with a local Tahoma box</p>
-        <p><a class="btn-link" href="https://github.com/coko7/kanumi">kanumi/</a> CLI to manage collection of images</p>
-        <p><a class="btn-link" href="https://github.com/coko7/somfy-home-controller">shc/</a> Node.js domotic script to control Somfy shutters</p>
-        <p><a class="btn-link" href="https://github.com/coko7/tcb-opus">tcb-opus/</a> Discord bot notifies users when new manga chapters come out</p>
-        <p><a class="btn-link" href="https://github.com/RTFW-rs/rtfw-http-rs">rtfw-http-rs/</a> My own rust http server from scratch</p>
+        <p>
+          <a class="btn-link" href="https://github.com/coko7/vegapull">vegapull/</a> One Piece TCG data scraper
+        </p>
+        <p>
+          <a class="btn-link" href="https://github.com/coko7/advent-of-time">aot/</a> Advent of Time browser game
+        </p>
+        <p>
+          <a class="btn-link" href="https://github.com/coko7/mataho">mataho/</a> CLI to interact with a local Tahoma box
+        </p>
+        <p>
+          <a class="btn-link" href="https://github.com/coko7/kanumi">kanumi/</a> CLI to manage collection of images
+        </p>
+        <p>
+          <a class="btn-link" href="https://github.com/coko7/somfy-home-controller">shc/</a> Node.js domotic script to control Somfy shutters
+        </p>
+        <p>
+          <a class="btn-link" href="https://github.com/coko7/tcb-opus">tcb-opus/</a> Discord bot notifies users when new manga chapters come out
+        </p>
+        <p>
+          <a class="btn-link" href="https://github.com/RTFW-rs/rtfw-http-rs">rtfw-http-rs/</a> My own rust http server from scratch
+        </p>
       </article>
 
       <article class="github-stats-article">
