fix: fix description for tcb-opus

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <a class="btn-link" href="https://github.com/coko7/somfy-home-controller">shc/</a> Node.js domotic script to control Somfy shutters
         </p>
         <p>
-          <a class="btn-link" href="https://github.com/coko7/tcb-opus">tcb-opus/</a> Discord bot notifies users when new manga chapters come out
+          <a class="btn-link" href="https://github.com/coko7/tcb-opus">tcb-opus/</a> Discord bot to get notifications when new manga chapters come out
         </p>
         <p>
           <a class="btn-link" href="https://github.com/RTFW-rs/rtfw-http-rs">rtfw-http-rs/</a> My own rust http server from scratch
