--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </article>
 
       <article>
-        <h3 class="title large">jq .coco.hobbies &lt; info.json</h3>
+        <h3 class="title large">jq .coko.hobbies &lt; info.json</h3>
         <h3 class="title small">jq . &lt; hobbies.json</h3>
         <pre class="pre-json large"><code>[
   { <span class="hl-str">"name"</span>: "coding", <span class="hl-str">"emoji"</span>: "⌨️" },
