fix: update daily.dev profile link

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           where i publish my rust crates and clis
         </p>
         <p>
-          <a class="btn-link" href="https://app.daily.dev/zydro_palm">
+          <a class="btn-link" href="https://app.daily.dev/coko7">
             <i class="si si-dailydotdev" style="font-weight: normal"></i>
             daily.dev:</a>
           i am there but also not really
