fix: add twitter profile link

--- a/index.html
+++ b/index.html
@@ -158,6 +158,12 @@
           where i publish my rust crates and clis
         </p>
         <p>
+          <a class="btn-link" href="https://x.com/cobalt_kook">
+            <i class="si si-x" style="font-weight: normal"></i>
+            Twitter:</a>
+          my boring twitter
+        </p>
+        <p>
           <a class="btn-link" href="https://app.daily.dev/coko7">
             <i class="si si-dailydotdev" style="font-weight: normal"></i>
             daily.dev:</a>
