feat: update social links

--- a/index.html
+++ b/index.html
@@ -146,16 +146,10 @@
           code, programming and stuff
         </p>
         <p>
-          <a class="btn-link" href="https://kitsu.app/users/brokomus">
-            <i class="si si-kitsu" style="font-weight: normal"></i>
-            Kitsu:</a>
-          my anime/manga lists
-        </p>
-        <p>
-          <a class="btn-link" href="https://crates.io/users/coko7">
-            <i class="si si-rust" style="font-weight: normal"></i>
-            crates.io:</a>
-          where i publish my rust crates and clis
+          <a class="btn-link" href="https://bsky.app/profile/cobalt-kook.bsky.social">
+            <i class="si si-bluesky" style="font-weight: normal"></i>
+            Bluesky:</a>
+          I might post stuff here
         </p>
         <p>
           <a class="btn-link" href="https://x.com/cobalt_kook">
@@ -173,7 +167,7 @@
           <a class="btn-link" href="mailto:contact@coko7.fr">
             <i class="si si-protonmail" style="font-weight: normal"></i>
             Email:</a>
-          contact me via email at contact@coko7.fr
+          you can reach me at contact@coko7.fr
         </p>
       </article>
     </main>
