--- a/index.html
+++ b/index.html
@@ -204,7 +204,14 @@
                 Sources available on
                 <a href="https://github.com/coko7/portfolio" class="btn-link">&lt;GitHub&gt;</a>
             </p>
-            <p>Copyright <span id="copyright-span">(c)</span> 2025 coko7</p>
+            <p>Copyright <span id="copyright-span">(c)</span> <span id="the-year-written">2025</span> coko7</p>
+            <dialog id="i-forgor">
+                <button class="close-btn" aria-label="Close dialog">&times;</button>
+                <h2>💀 Woops! 💀</h2>
+                <p>The year in the footer looks incorrect. It should say <b><span>20XX</span></b>.</p>
+                <br/>
+                <p>Please complain at: <a class="btn-link" href="mailto:contact@coko7">contact@coko7.fr</a></p>
+            </dialog>
             <p>All Rights Reserved</p>
         </footer>
     </body>
