feat: add link to practical-vim-notes

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                         <img alt="The Pragmatic Programmer by Andy Hunt and Dave Thomas" src="./assets/books/pragmatic_programmer.png"/>
                    </a>
                 </div>
+                <p style="text-align: center; margin-top: 1em;">My notes/cheatsheets on Practical Vim: <a class="btn-link" href="https://github.com/coko7/practical-vim-notes">coko7/practical-vim-notes</a></p>
             </article>
 
             <article>
