chore: add books, resume/501 and huco-705 excerpt

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <h3 class="title large">whoami | xargs -i cat intro_{}.txt</h3>
                 <h3 class="title small">whoami</h3>
                 <p>I'm coko.</p>
-                <p>A french dev who's passionate about programming and open-source</p>
-                <p>The terminal is my comfy place: nvim, tmux, fzf, rg <i>*and more*</i></p>
+                <p>A french dev who's passionate about programming and open-source.</p>
+                <p>The terminal is my comfy place: nvim, tmux, fzf, rg <i>*and more...*</i></p>
             </article>
 
             <article>
@@ -120,18 +120,20 @@
                 <h3 class="title large">jq .coko.hobbies &lt; info.json</h3>
                 <h3 class="title small">jq . &lt; hobbies.json</h3>
 <pre class="pre-json large"><code>[
-    { <span class="hl-str">"name"</span>: "coding", <span class="hl-str">"emoji"</span>: "⌨️" },
-    { <span class="hl-str">"name"</span>: "running", <span class="hl-str">"emoji"</span>: "🏃" },
-    { <span class="hl-str">"name"</span>: "reading", <span class="hl-str">"emoji"</span>: "📖" },
-    { <span class="hl-str">"name"</span>: "anime", <span class="hl-str">"emoji"</span>: "🇯🇵" },
-    { <span class="hl-str">"name"</span>: "gaming", <span class="hl-str">"emoji"</span>: "🎮" }
+    { <span class="hl-str">"name"</span>: "coding", <span class="hl-str">"icon"</span>: "⌨️" },
+    { <span class="hl-str">"name"</span>: "running", <span class="hl-str">"icon"</span>: "🏃" },
+    { <span class="hl-str">"name"</span>: "reading", <span class="hl-str">"icon"</span>: "📖" },
+    { <span class="hl-str">"name"</span>: "drawing", <span class="hl-str">"icon"</span>: "✏️" },
+    { <span class="hl-str">"name"</span>: "anime", <span class="hl-str">"icon"</span>: "🇯🇵" },
+    { <span class="hl-str">"name"</span>: "gaming", <span class="hl-str">"icon"</span>: "🎮" }
 ]</code></pre>
 <pre class="pre-json small"><code>[
-    { <span class="hl-str">"name"</span>: "coding" },
-    { <span class="hl-str">"name"</span>: "running" },
-    { <span class="hl-str">"name"</span>: "reading" },
-    { <span class="hl-str">"name"</span>: "anime" },
-    { <span class="hl-str">"name"</span>: "gaming" }
+    { <span class="hl-str">"name"</span>: "⌨️ coding" },
+    { <span class="hl-str">"name"</span>: "🏃 running" },
+    { <span class="hl-str">"name"</span>: "📖 reading" },
+    { <span class="hl-str">"name"</span>: "✏️ drawing" },
+    { <span class="hl-str">"name"</span>: "🇯🇵 anime" },
+    { <span class="hl-str">"name"</span>: "🎮 gaming" }
 ]</code></pre>
             </article>
 
@@ -151,14 +153,64 @@
                     <a href="https://www.goodreads.com/book/show/219841613-we-programmers">
                         <img alt="We, Programmers by Uncle Bob" src="./assets/books/we_programmers.jpg"/>
                     </a>
-                    <a href="https://www.goodreads.com/book/show/40495329-oauth-2-0-simplified">
-                        <img alt="OAuth 2.0 Simplified by Aaron Parecki" src="./assets/books/oauth2_simplified.jpg"/>
-                    </a>
+                    <a href="https://www.goodreads.com/book/show/128172.Linux_Pocket_Guide">
+                        <img alt="Linux Pocket Guide by Daniel J. Barrett" src="./assets/books/linux-pocket-guide.jpg"/>
+                   </a>
                     <a href="https://www.goodreads.com/book/show/4099.The_Pragmatic_Programmer">
                         <img alt="The Pragmatic Programmer by Andy Hunt and Dave Thomas" src="./assets/books/pragmatic_programmer.png"/>
                    </a>
+                    <a href="https://www.goodreads.com/book/show/40495329-oauth-2-0-simplified">
+                        <img alt="OAuth 2.0 Simplified by Aaron Parecki" src="./assets/books/oauth2_simplified.jpg"/>
+                    </a>
+                    <a href="https://www.goodreads.com/book/show/10284614-the-clean-coder">
+                        <img alt="The Clean Coder by Uncle Bob" src="./assets/books/clean-coder.jpg"/>
+                   </a>
                 </div>
                 <p style="text-align: center; margin-top: 1em;">My notes/cheatsheets on Practical Vim: <a class="btn-link" href="https://github.com/coko7/practical-vim-notes">coko7/practical-vim-notes</a></p>
+            </article>
+
+            <article>
+                <h3 class="title large">zathura resumes/*.pdf</h3>
+                <h3 class="title small">zathura resumes/*.pdf</h3>
+
+                <p style="text-align: center; margin-bottom: 1em; color: orange;"><i>*Coming soon*</i></p>
+                <p>I'd like to setup some CDN and have it serve my resume(s) for fun.</p>
+                <p>For now, you can email at <a class="btn-link" href="mailto:contact@coko7.fr">contact@coko7.fr</a> to get a fresh copy.</p>
+                <p>I only support <b>english</b> and <b>français</b> for now.</p><br/>
+                <p>Surely this entire plot wasn't just an excuse to make use of <a class="btn-link" href="https://http.cat">http.😼</a>:</p>
+
+                <div style="text-align: center; margin-top: 1em">
+                    <a href="https://http.cat/status/501">
+                        <img class="http-cat" src="https://http.cat/501" alt="">
+                    </a>
+                </div>
+            </article>
+
+            <article>
+                <h3 class="title large"># TODO COCO: Retrieve HUCO-705 design doc</h3>
+                <h3 class="title small"># TODO: HUCO-705 design doc</h3>
+
+                <p>About ten years ago, I designed my own encryption algorithm based on <a class="btn-link" href="https://en.wikipedia.org/wiki/Vigen%C3%A8re_cipher">Vigenère cipher</a>: <b>huco-705</b></p><br/>
+                <p>I was still in highschool back then and I felt pretty strong about it ngl.</p><br/>
+                <p>Then, I got into CS studies and upon learning about crypto, I concluded <b>huco-705</b> was pretty much useless in modern times.</p><br/>
+                <p>I studied some more, and eventually realized it violated a core principle of cryptography: <a class="btn-link" href="https://en.wikipedia.org/wiki/Kerckhoffs%27s_principle">Kerckhoffs's principle</a>:</p><br/>
+                <blockquote style="color: orange;">
+                    <i>
+                        "The principle holds that a cryptosystem should be secure, even if everything about the system, except the key, is public knowledge."
+                    </i>
+                </blockquote>
+                <br/>
+                <p>&gt;&gt;&gt; My entire algo pretty much relied on <a class="btn-link" href="https://en.wikipedia.org/wiki/Security_through_obscurity">security through obscurity</a> <i>(the very opposite of that)</i></p><br/>
+                <p>In the end, regardless of how bad <b>huco-705</b> turned out to be, it was still what hooked me up to programming in the first place.</p><br/>
+                <p>I cannot be proud of its security, but I am very proud of the path it opened up for me.</p><br/>
+                <p>I still have this 10-year old design on paper somewhere and once I find it, I'll make sure to include a picture of it on this site.</p><br/>
+                <p>For now, here's another one of my favorite cats:</p>
+                <div style="text-align: center; margin-top: 1em">
+                    <a href="https://http.cat/status/404">
+                        <img class="http-cat" src="https://http.cat/404" alt="">
+                    </a>
+                </div>
+                <p><i>Maybe I need to start looking into <a class="btn-link" href="https://gohugo.io/">hugo</a> or <a class="btn-link" href="https://github.com/getzola/zola">zola</a> and put this sort of stories there instead of bloating this page.</i></p>
             </article>
 
             <article>
