fix: tweak text + add N.E.R.D

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <body>
         <header>
             <h1>read.me</h1>
+            <h3><b>N</b>eovim <b>E</b>vangelist, <b>R</b>ewriting <b>D</b>otfiles</h3>
         </header>
         <main>
             <div id="profile-picture">
@@ -175,8 +176,8 @@
 
                 <p style="text-align: center; margin-bottom: 1em; color: orange;"><i>*Coming soon*</i></p>
                 <p>I'd like to setup some CDN and have it serve my resume(s) for fun.</p>
-                <p>For now, you can email at <a class="btn-link" href="mailto:contact@coko7.fr">contact@coko7.fr</a> to get a fresh copy.</p>
-                <p>I only support <b>english</b> and <b>français</b> for now.</p><br/>
+                <p>For now, you can email me at <a class="btn-link" href="mailto:contact@coko7.fr">contact@coko7.fr</a> to get a fresh copy.</p>
+                <p>I only support <b>english</b> and <b>français</b>.</p><br/>
                 <p>Surely this entire plot wasn't just an excuse to make use of <a class="btn-link" href="https://http.cat">http.😼</a>:</p>
 
                 <div style="text-align: center; margin-top: 1em">
@@ -203,8 +204,8 @@
                 <p>&gt;&gt;&gt; My entire algo pretty much relied on <a class="btn-link" href="https://en.wikipedia.org/wiki/Security_through_obscurity">security through obscurity</a> <i>(the very opposite of that)</i></p><br/>
                 <p>In the end, regardless of how bad <b>huco-705</b> turned out to be, it was still what hooked me up to programming in the first place.</p><br/>
                 <p>I cannot be proud of its security, but I am very proud of the path it opened up for me.</p><br/>
-                <p>I still have this 10-year old design on paper somewhere and once I find it, I'll make sure to include a picture of it on this site.</p><br/>
-                <p>For now, here's another one of my favorite cats:</p>
+                <p>I still have this 10-year old design paper somewhere and once I find it, I'll make sure to include a picture of it on this site.</p><br/>
+                <p>Until then, here's a fitting placeholder:</p>
                 <div style="text-align: center; margin-top: 1em">
                     <a href="https://http.cat/status/404">
                         <img class="http-cat" src="https://http.cat/404" alt="">
