--- a/index.html
+++ b/index.html
@@ -121,20 +121,20 @@
                 <h3 class="title large">jq .coko.hobbies &lt; info.json</h3>
                 <h3 class="title small">jq . &lt; hobbies.json</h3>
 <pre class="pre-json large"><code>[
-    { <span>"name"</span>: <span class="hl-str">"⌨️ coding"</span>, <span>"frequency"</span>: <span class="hl-str">"daily"</span> },
-    { <span>"name"</span>: <span class="hl-str">"📖 reading"</span>, <span>"frequency"</span>: <span class="hl-str">"daily"</span> },
-    { <span>"name"</span>: <span class="hl-str">"🏃 running"</span>, <span>"frequency"</span>: <span class="hl-str">"3x week"</span> },
-    { <span>"name"</span>: <span class="hl-str">"✏️ drawing"</span>, <span>"frequency"</span>: <span class="hl-str">"weekly"</span> },
-    { <span>"name"</span>: <span class="hl-str">"🇯🇵 anime"</span>, <span>"frequency"</span>: <span class="hl-str">"occasionally"</span> },
-    { <span>"name"</span>: <span class="hl-str">"🎮 gaming"</span>, <span>"frequency"</span>: <span class="hl-str">"occasionally"</span> }
+    { "name": <span class="hl-str">"⌨️ coding"</span>, <span>"frequency"</span>: <span class="hl-str">"daily"</span> },
+    { "name": <span class="hl-str">"📖 reading"</span>, <span>"frequency"</span>: <span class="hl-str">"daily"</span> },
+    { "name": <span class="hl-str">"🏃 running"</span>, <span>"frequency"</span>: <span class="hl-str">"weekly"</span> },
+    { "name": <span class="hl-str">"✏️ drawing"</span>, <span>"frequency"</span>: <span class="hl-str">"weekly"</span> },
+    { "name": <span class="hl-str">"🇯🇵 anime"</span>, <span>"frequency"</span>: <span class="hl-str">"random"</span> },
+    { "name": <span class="hl-str">"🎮 gaming"</span>, <span>"frequency"</span>: <span class="hl-str">"random"</span> }
 ]</code></pre>
 <pre class="pre-json small"><code>[
-    { <span>"n"</span>: <span class="hl-str">"⌨️ coding"</span>, <span>"freq"</span>: <span class="hl-str">"daily"</span> },
-    { <span>"n"</span>: <span class="hl-str">"📖 reading"</span>, <span>"freq"</span>: <span class="hl-str">"daily"</span> },
-    { <span>"n"</span>: <span class="hl-str">"🏃 running"</span>, <span>"freq"</span>: <span class="hl-str">"3x week"</span> },
-    { <span>"n"</span>: <span class="hl-str">"✏️ drawing"</span>, <span>"freq"</span>: <span class="hl-str">"weekly"</span> },
-    { <span>"n"</span>: <span class="hl-str">"🇯🇵 anime"</span>, <span>"freq"</span>: <span class="hl-str">"occasionally"</span> },
-    { <span>"n"</span>: <span class="hl-str">"🎮 gaming"</span>, <span>"freq"</span>: <span class="hl-str">"occasionally"</span> }
+    { "coding": <span class="hl-str">"daily"</span> },
+    { "reading": <span class="hl-str">"daily"</span> },
+    { "running": <span class="hl-str">"weekly"</span> },
+    { "drawing": <span class="hl-str">"weekly"</span> },
+    { "anime": <span class="hl-str">"random"</span> },
+    { "gaming": <span class="hl-str">"random"</span> }
 ]</code></pre>
             </article>
 
