fix: update intro text

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <h3 class="title large">whoami | xargs -i cat intro_{}.txt</h3>
                 <h3 class="title small">whoami</h3>
                 <p>I'm coko.</p>
-                <p>A french dev who's passionate about programming and open-source.</p>
-                <p>The terminal is my comfy place: nvim, tmux, fzf, rg <i>*and more...*</i></p>
+                <p>I spend most of my time in the terminal and rely on a variety of clis to help me on my day job:</p>
+                <p>nvim, tmux, fzf, sed, grep, rg, bat, <i>*and many more...*</i></p>
             </article>
 
             <article>
@@ -112,6 +112,8 @@
                 <div>
                     <h4>Software</h4>
                     <p>* Self-hosted send instance at <a href="https://send.coko7.fr" class="btn-link">send.coko7.fr</a></p>
+                    <p>* Private <a href="https://atuin.sh/" class="btn-link">atuin.sh</a> server to sync/backup shell history <i>(overkill?)</i></p>
+                    <p>* Self-hosted media server with <a href="https://github.com/FuzzyGrim/Yamtrack" class="btn-link">Yamtrack</a></p>
                     <p>* AOT game at <a href="https://aot.coko7.fr" class="btn-link">aot.coko7.fr</a></p>
                     <p>* Caddy/Nginx as reverse proxies</p>
                 </div>
@@ -204,13 +206,13 @@
                 <p>&gt;&gt;&gt; My entire algo pretty much relied on <a class="btn-link" href="https://en.wikipedia.org/wiki/Security_through_obscurity">security through obscurity</a> <i>(the very opposite of that)</i></p><br/>
                 <p>In the end, regardless of how bad <b>huco-705</b> turned out to be, it was still what hooked me up to programming in the first place.</p><br/>
                 <p>I cannot be proud of its security, but I am very proud of the path it opened up for me.</p><br/>
-                <p>I still have this 10-year old design paper somewhere and once I find it, I'll make sure to include a picture of it on this site.</p><br/>
-                <p>Until then, here's a fitting placeholder:</p>
+                <p>I still have this 10-year old design paper right here:<p>
                 <div style="text-align: center; margin-top: 1em">
                     <a href="https://http.cat/status/404">
-                        <img class="http-cat" src="https://http.cat/404" alt="">
+                        <img class="http-cat" src="./assets/huco705-papyrus.jpg" alt="">
                     </a>
                 </div>
+                <p>Regarding the source code, I found it burried in some deep place on my NAS and uploaded it to <a href="https://github.com/coko7/huco705-archive" class="btn-link">GitHub</a></p>
                 <p><i>Maybe I need to start looking into <a class="btn-link" href="https://gohugo.io/">hugo</a> or <a class="btn-link" href="https://github.com/getzola/zola">zola</a> and put this sort of stories there instead of bloating this page.</i></p>
             </article>
 
