fix: upload huco705 image

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h3 class="title small">whoami</h3>
                 <p>I'm coko.</p>
                 <p>I spend most of my time in the terminal and rely on a variety of clis to help me on my day job:</p>
-                <p>nvim, tmux, fzf, sed, grep, rg, bat, <i>*and many more...*</i></p>
+                <p>nvim, tmux, fzf, sed, grep, rg, jq, <i>*and many more...*</i></p>
             </article>
 
             <article>
@@ -212,8 +212,7 @@
                         <img class="http-cat" src="./assets/huco705-papyrus.jpg" alt="">
                     </a>
                 </div>
-                <p>Regarding the source code, I found it burried in some deep place on my NAS and uploaded it to <a href="https://github.com/coko7/huco705-archive" class="btn-link">GitHub</a></p>
-                <p><i>Maybe I need to start looking into <a class="btn-link" href="https://gohugo.io/">hugo</a> or <a class="btn-link" href="https://github.com/getzola/zola">zola</a> and put this sort of stories there instead of bloating this page.</i></p>
+                <p>Source code available here: <a href="https://github.com/coko7/huco705-archive" class="btn-link">coko7/huco705-archive</a></p>
             </article>
 
             <article>
