feat: add mastodon to social links

--- a/index.html
+++ b/index.html
@@ -232,6 +232,12 @@
                     I might post stuff here
                 </p>
                 <p>
+                    <a class="btn-link" href="https://mastodon.social/@cobalt_cook718">
+                        <i class="si si-mastodon" style="font-weight: normal"></i>
+                        Mastodon:</a>
+                    gotta be more active there i guess
+                </p>
+                <p>
                     <a class="btn-link" href="https://x.com/cobalt_kook">
                         <i class="si si-x" style="font-weight: normal"></i>
                         Twitter:</a>
